--- a/back/project-api/config/config.yaml
+++ b/back/project-api/config/config.yaml
@@ -2,9 +2,9 @@ server:
   name: "project-api"
   addr: "0.0.0.0:80"
 zap:
-  debugFileName: "D:\\go\\menu\\project_ws\\logs\\debug\\project-debug.log"
-  infoFileName: "D:\\go\\menu\\project_ws\\logs\\info\\project-info.log"
-  warnFileName: "D:\\go\\menu\\project_ws\\logs\\error\\project-error.log"
+  debugFileName: "..\\logs\\debug\\project-debug.log"
+  infoFileName: "..\\logs\\info\\project-info.log"
+  warnFileName: "..\\logs\\error\\project-error.log"
   maxSize: 500,
   maxAge: 28,
   MaxBackups: 3
