--- a/back/project-project/config/config.yaml
+++ b/back/project-project/config/config.yaml
@@ -2,9 +2,9 @@ server:
   name: "project-project"
   addr: "127.0.0.1:8081"
 zap:
-  debugFileName: "D:\\go\\project\\ms_project\\logs\\debug\\menu-debug.log"
-  infoFileName: "D:\\go\\project\\ms_project\\logs\\info\\menu-info.log"
-  warnFileName: "D:\\go\\project\\ms_project\\logs\\error\\menu-error.log"
+  debugFileName: "..\\logs\\debug\\project-debug.log"
+  infoFileName: "..\\logs\\info\\project-info.log"
+  warnFileName: "..\\logs\\error\\project-error.log"
   maxSize: 500,
   maxAge: 28,
   MaxBackups: 3
